Feat: Add sideEffects: false to support webpack v4
https://medium.com/webpack/webpack-4-released-today-6cdb994702d4

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tsc:example": "tsc -p example",
     "tsc:main": "tsc -p ."
   },
+  "sideEffects": false,
   "dependencies": {
     "amator": "1.0.1"
   },
