--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-dom": "^16.0.2",
     "babel-cli": "^6.23.0",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-styled-components": "^1.1.5",
     "babel-preset-env": "^1.2.1",
     "babel-preset-es2015-rollup": "^3.0.0",
     "concurrently": "^3.5.0",
@@ -54,6 +55,7 @@
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^2.0.0",
     "scroll-into-view-if-needed": "link:.",
+    "styled-components": "^2.1.0",
     "system-font-stack": "^1.0.4",
     "typescript": "^2.6.1",
     "uglifyjs-webpack-plugin": "^1.0.1"
