--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:carbon-browsers
+      - image: cypress/browsers:chrome64
 
     working_directory: ~/repo
 
@@ -10,10 +10,6 @@ jobs:
       - checkout
 
       - run: node --version && npm --version && npx --version && yarn --version
-
-      - run:
-          name: Install Cypress dependencies
-          command: sudo apt-get install xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
 
       - add-ssh-keys:
           fingerprints:
