--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,14 +2,18 @@ version: 2
 jobs:
   build:
     docker:
-      - image: cypress/browsers:chrome64
+      - image: circleci/node:carbon-browsers
 
-    working_directory: ~/app
+    working_directory: ~/repo
 
     steps:
       - checkout
 
       - run: node --version && npm --version && npx --version && yarn --version
+
+      - run:
+          name: Install Cypress dependencies
+          command: sudo apt-get install xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
 
       - add-ssh-keys:
           fingerprints:
@@ -17,8 +21,8 @@ jobs:
 
       - restore_cache:
           keys:
-            - v4-dependencies-{{ checksum "yarn.lock" }}
-            - v4-dependencies-
+            - v3-dependencies-{{ checksum "yarn.lock" }}
+            - v3-dependencies-
 
       - run: yarn install
 
@@ -41,7 +45,7 @@ jobs:
       - save_cache:
           paths:
             - node_modules
-          key: v4-dependencies-{{ checksum "yarn.lock" }}
+          key: v3-dependencies-{{ checksum "yarn.lock" }}
 
       - run: yarn semantic-release || true
 
