--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/react-dom": "16.0.5",
     "babel-cli": "^6.23.0",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-styled-components": "^1.1.5",
+    "babel-plugin-styled-components": "1.5.1",
     "babel-preset-env": "^1.2.1",
     "babel-preset-es2015-rollup": "^3.0.0",
     "bulma": "0.7.0",
@@ -56,7 +56,7 @@
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^2.0.0",
     "scroll-into-view-if-needed": "link:.",
-    "styled-components": "^2.1.0",
+    "styled-components": "3.2.5",
     "system-font-stack": "^1.0.4",
     "typescript": "2.8.1",
     "uglifyjs-webpack-plugin": "^1.0.1"
