--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-env": "^1.2.1",
     "babel-preset-es2015-rollup": "^3.0.0",
     "bulma": "0.7.0",
+    "codemirror": "5.36.0",
     "concurrently": "^3.5.0",
     "cypress": "2.1.0",
     "husky": "^0.14.3",
@@ -48,7 +49,9 @@
     "prettier-browser": "git://github.com/prettier/prettier.git#1.8.2",
     "prettier-package-json": "^1.4.0",
     "react": "16.3.1",
+    "react-codemirror2": "4.2.1",
     "react-dom": "16.3.1",
+    "react-syntax-highlighter": "7.0.2",
     "release-relief": "^1.0.1",
     "rimraf": "^2.6.1",
     "rollup": "^0.50.0",
