--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "alwaysStrict": true,
     "lib": ["es5", "es2015.promise", "dom"]
   },
-  "exclude": ["node_modules", "dist", "example", "**/*-test.ts"]
+  "exclude": ["node_modules", "dist", "example", "**/*-test.ts", "typings"]
 }
