--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -3,7 +3,7 @@
     "strict": true,
     "baseUrl": "../node_modules",
     "target": "es5",
-    "lib": ["es5", "dom"],
+    "lib": ["es5", "dom", "es2015"],
     "types": ["cypress"]
   },
   "include": ["**/*.ts"]
