--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "tsc:main": "tsc -p ."
   },
   "devDependencies": {
+    "@cypress/browserify-preprocessor": "1.0.2",
     "@types/next": "2.4.9",
+    "@types/node": "9.6.6",
     "@types/prettier": "1.12.0",
     "@types/react": "16.3.11",
     "@types/react-dom": "16.0.5",
@@ -38,6 +40,7 @@
     "babel-plugin-styled-components": "1.5.1",
     "babel-preset-env": "^1.2.1",
     "babel-preset-es2015-rollup": "^3.0.0",
+    "browserify": "16.2.0",
     "bulma": "0.7.0",
     "codemirror": "5.36.0",
     "concurrently": "^3.5.0",
@@ -61,6 +64,7 @@
     "scroll-into-view-if-needed": "link:.",
     "styled-components": "3.2.6",
     "system-font-stack": "1.0.5",
+    "tsify": "4.0.0",
     "typescript": "2.8.3",
     "uglifyjs-webpack-plugin": "^1.0.1"
   },
