about to use yarn workspaces

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scroll-into-view-if-needed",
-  "description": "Ponyfill for upcoming Element.scrollIntoView() APIs like scrollMode: if-needed, behavior: smooth amd block: center",
+  "description": "Ponyfill for upcoming Element.scrollIntoView() APIs like scrollMode: if-needed, behavior: smooth and block: center",
   "license": "MIT",
   "author": "Stian Didriksen",
   "homepage": "https://stipsan.github.io/scroll-into-view-if-needed",
@@ -13,19 +13,19 @@
   "scripts": {
     "prebuild": "yarn clean",
     "build": "yarn build:tsc && yarn build:rollup",
+    "build:example": "next build example",
     "build:rollup": "rollup -c",
-    "build:tsc": "yarn tsc:main && yarn tsc:example",
+    "build:tsc": "yarn tsc:main",
     "clean": "rimraf dist",
     "precommit": "lint-staged",
     "predev": "yarn build",
-    "dev": "concurrently \"yarn tsc:main --watch\" \"yarn tsc:example --watch\" \"yarn build:rollup -w\" \"next dev example\"",
+    "dev": "concurrently \"yarn tsc:main --watch\" \"yarn build:rollup -w\" \"next dev example\"",
     "docs": "next build example && DOCS=true next export -o ./docs example && npx -p https://gist.github.com/stipsan/bbf4adcdafd9eabfa6a9a42397a1c1b9 -c 'git-update-ghpages'",
     "prepublishOnly": "unset npm_config_cafile && yarn build",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "prestart": "yarn build",
-    "start": "next build example && next start example",
+    "start": "next start example",
     "test": "cypress run --browser chrome --reporter junit --reporter-options 'mochaFile=junit/test-results.xml'",
-    "tsc:example": "tsc -p example",
     "tsc:main": "tsc -p ."
   },
   "devDependencies": {
@@ -35,6 +35,7 @@
     "@types/prettier": "1.12.0",
     "@types/react": "16.3.11",
     "@types/react-dom": "16.0.5",
+    "@zeit/next-typescript": "0.1.1",
     "babel-cli": "^6.23.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-styled-components": "1.5.1",
