--- a/packages/scroll-into-view-if-needed/package.json
+++ b/packages/scroll-into-view-if-needed/package.json
@@ -1,8 +1,8 @@
 {
   "name": "scroll-into-view-if-needed",
-  "description": "Element.scrollIntoViewIfNeeded ponyfill that can animate the scrolling",
-  "author": "Stian Didriksen",
+  "description": "Ponyfill for upcoming Element.scrollIntoView() APIs like scrollMode: if-needed, behavior: smooth and block: center",
   "license": "MIT",
+  "author": "Stian Didriksen",
   "homepage": "https://stipsan.github.io/scroll-into-view-if-needed",
   "repository": {
     "type": "git",
@@ -13,46 +13,49 @@
   "scripts": {
     "prebuild": "yarn clean",
     "build": "yarn build:tsc && yarn build:rollup",
+    "build:example": "next build example",
     "build:rollup": "rollup -c",
-    "build:tsc": "yarn tsc:main && yarn tsc:example",
-    "changelog:commit": "sr-changelog commit",
-    "changelog:preview": "sr-changelog",
+    "build:tsc": "yarn tsc:main",
     "clean": "rimraf dist",
     "precommit": "lint-staged",
     "predev": "yarn build",
-    "dev": "concurrently \"yarn tsc:main --watch\" \"yarn tsc:example --watch\" \"yarn build:rollup -w\" \"next dev example\"",
+    "dev": "concurrently \"yarn tsc:main --watch\" \"yarn build:rollup -w\" \"next dev example\"",
     "docs": "next build example && DOCS=true next export -o ./docs example && npx -p https://gist.github.com/stipsan/bbf4adcdafd9eabfa6a9a42397a1c1b9 -c 'git-update-ghpages'",
     "prepublishOnly": "unset npm_config_cafile && yarn build",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "prestart": "yarn build",
-    "start": "next build example && next start example",
+    "start": "next start example",
     "test": "cypress run --browser chrome --reporter junit --reporter-options 'mochaFile=junit/test-results.xml'",
-    "tsc:example": "tsc -p example",
     "tsc:main": "tsc -p ."
   },
-  "sideEffects": false,
-  "dependencies": {
-    "amator": "1.0.1"
-  },
   "devDependencies": {
-    "@types/next": "^2.4.5",
-    "@types/prettier": "^1.8.0",
-    "@types/react": "^16.0.20",
-    "@types/react-dom": "^16.0.2",
+    "@cypress/browserify-preprocessor": "1.0.2",
+    "@types/next": "2.4.9",
+    "@types/node": "9.6.6",
+    "@types/prettier": "1.12.0",
+    "@types/react": "16.3.11",
+    "@types/react-dom": "16.0.5",
+    "@zeit/next-typescript": "0.1.1",
     "babel-cli": "^6.23.0",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-styled-components": "1.5.1",
     "babel-preset-env": "^1.2.1",
     "babel-preset-es2015-rollup": "^3.0.0",
+    "browserify": "16.2.0",
+    "bulma": "0.7.0",
+    "codemirror": "5.36.0",
     "concurrently": "^3.5.0",
-    "cypress": "^1.0.3",
+    "cypress": "2.1.0",
     "husky": "^0.14.3",
     "lint-staged": "^4.3.0",
-    "next": "^4.1.4",
-    "prettier": "^1.8.2",
+    "next": "5.1.0",
+    "prettier": "1.12.0",
     "prettier-browser": "git://github.com/prettier/prettier.git#1.8.2",
-    "prettier-package-json": "^1.4.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "prettier-package-json": "1.5.1",
+    "react": "16.3.1",
+    "react-codemirror2": "4.2.1",
+    "react-dom": "16.3.1",
+    "react-syntax-highlighter": "7.0.2",
     "release-relief": "^1.0.1",
     "rimraf": "^2.6.1",
     "rollup": "^0.50.0",
@@ -60,16 +63,21 @@
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^2.0.0",
     "scroll-into-view-if-needed": "link:.",
-    "system-font-stack": "^1.0.4",
-    "typescript": "^2.6.1",
+    "styled-components": "3.2.6",
+    "system-font-stack": "1.0.5",
+    "tsify": "4.0.0",
+    "typescript": "2.8.3",
     "uglifyjs-webpack-plugin": "^1.0.1"
   },
   "keywords": [
+    "behavior-smooth",
+    "if-needed",
     "ponyfill",
     "scroll",
     "scroll-into-view",
     "scrollIntoView",
     "scrollIntoViewIfNeeded",
+    "scrollMode",
     "smooth",
     "smoothscroll",
     "typescript"
@@ -96,12 +104,16 @@
       "git add"
     ]
   },
-  "module": "dist/index.js",
+  "module": "index.js",
   "release": {
     "analyzeCommits": "semantic-release-tamia/analyzeCommits",
     "verifyConditions": "condition-circle",
     "generateNotes": "semantic-release-tamia/generateNotes",
     "verifyRelease": "semantic-release-tamia/verifyRelease"
   },
-  "typings": "dist/index.d.ts"
+  "resolutions": {
+    "@types/react": "16.3.11"
+  },
+  "sideEffects": false,
+  "typings": "typings/index.d.ts"
 }
