--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,57 +1,55 @@
+
+aliases:
+  - &restore-cache
+    keys:
+      - v3-dependencies-{{ .Branch }}-{{ checksum "yarn.lock" }}
+      # Fallback in case checksum fails
+      - v3-dependencies-{{ .Branch }}-
+
+  - &save-cache
+    paths:
+      - node_modules
+    key: v2-dependencies-{{ .Branch }}-{{ checksum "yarn.lock" }}
+
+  - &cypress-dependencies-install
+    run:
+      name: Install Cypress dependencies
+      command: sudo apt-get install xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
+
 version: 2
 jobs:
-  build:
+  Website:
     docker:
       - image: circleci/node:carbon-browsers
-
-    working_directory: ~/repo
-
     steps:
       - checkout
-
-      - run: node --version && npm --version && npx --version && yarn --version
-
-      - run:
-          name: Install Cypress dependencies
-          command: sudo apt-get install xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
-
-      - add-ssh-keys:
-          fingerprints:
-            - "e1:ca:5d:f0:58:11:c7:ae:b7:ac:4a:1b:cc:3a:0d:4a"
-
-      - restore_cache:
-          keys:
-            - v3-dependencies-{{ checksum "yarn.lock" }}
-            - v3-dependencies-
-
-      - run: yarn install
-
-      - run: yarn build
-
       - run: 
-          command: yarn start
-          background: true
+          name: Report dependency versions included in the docker image
+          command: node --version && npm --version && npx --version && yarn --version
+      - *cypress-dependencies-install
+      - restore-cache: *restore-cache
+      - run: echo TODO
+      - save-cache: *save-cache
 
-      - run: npx wait-on http://localhost:3000
+  Semantic Release:
+    docker:
+      - image: circleci/node:8
+    steps:
+      - checkout
+      - restore-cache: *restore-cache
+      - run: echo TODO build
+      - save-cache: *save-cache
+      - run: yarn semantic-release
 
-      - run: yarn test
-
-      - store_test_results:
-          path: junit
-
-      - store_artifacts:
-          path: cypress/screenshots
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v3-dependencies-{{ checksum "yarn.lock" }}
-
-      - run: yarn semantic-release || true
-
-      - run:
-          name: Maybe deploy to gh-pages
-          command: |
-            if [[ $CIRCLE_BRANCH == master ]]; then
-              yarn docs
-            fi
+# Workflows enables us to run multiple jobs in parallel
+workflows:
+  version: 2
+  Build and Deploy:
+    jobs:
+      - Website
+      - Semantic Release:
+          requires:
+            - Website
+          filters:
+            branches:
+              only: master
