--- a/website/package.json
+++ b/website/package.json
@@ -1,6 +1,7 @@
 
 {
   "name": "scroll-into-view-if-needed-website",
+  "description": "Deployed by Netlify",
   "version": "0.0.0-dev",
 "private": true,
 "dependencies": {
