--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "semi": false,
     "singleQuote": true,
     "trailingComma": "es5"
+  },
+  "resolutions": {
+    "@types/react": "*"
   }
 }
