--- a/packages/scroll-into-view-if-needed/package.json
+++ b/packages/scroll-into-view-if-needed/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "git+https://github.com/stipsan/scroll-into-view-if-needed.git"
   },
-  "version": "2.0.0",
+  "version": "2.0.0-dev",
   "main": "dist/bundle.js",
   "scripts": {
     "prebuild": "yarn clean",
@@ -28,40 +28,19 @@
     "tsc:main": "tsc -p ."
   },
   "devDependencies": {
-    "@cypress/browserify-preprocessor": "1.0.2",
-    "@types/next": "2.4.9",
-    "@types/node": "9.6.6",
-    "@types/prettier": "1.12.0",
-    "@types/react": "16.3.11",
-    "@types/react-dom": "16.0.5",
-    "@zeit/next-typescript": "0.1.1",
     "babel-cli": "^6.23.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-styled-components": "1.5.1",
     "babel-preset-env": "^1.2.1",
     "babel-preset-es2015-rollup": "^3.0.0",
-    "browserify": "16.2.0",
-    "bulma": "0.7.0",
-    "codemirror": "5.36.0",
     "concurrently": "^3.5.0",
-    "cypress": "2.1.0",
-    "next": "5.1.0",
-    "prettier-browser": "git://github.com/prettier/prettier.git#1.8.2",
-    "react": "16.3.1",
-    "react-codemirror2": "4.2.1",
-    "react-dom": "16.3.1",
-    "react-syntax-highlighter": "7.0.2",
-    "release-relief": "^1.0.1",
+    "release-relief": "1.0.1",
     "rimraf": "^2.6.1",
     "rollup": "^0.50.0",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^2.0.0",
-    "styled-components": "3.2.6",
-    "system-font-stack": "1.0.5",
-    "tsify": "4.0.0",
-    "typescript": "2.8.3",
-    "uglifyjs-webpack-plugin": "^1.0.1"
+    "typescript": "2.8.3"
   },
   "keywords": [
     "behavior-smooth",
@@ -82,9 +61,6 @@
     "verifyConditions": "condition-circle",
     "generateNotes": "semantic-release-tamia/generateNotes",
     "verifyRelease": "semantic-release-tamia/verifyRelease"
-  },
-  "resolutions": {
-    "@types/react": "16.3.11"
   },
   "sideEffects": false,
   "typings": "typings/index.d.ts"
