--- a/packages/scroll-into-view-if-needed/package.json
+++ b/packages/scroll-into-view-if-needed/package.json
@@ -13,19 +13,13 @@
   "scripts": {
     "prebuild": "yarn clean",
     "build": "yarn build:tsc && yarn build:rollup",
-    "build:example": "next build example",
     "build:rollup": "rollup -c",
-    "build:tsc": "yarn tsc:main",
+    "build:tsc": "tsc -p .",
     "clean": "rimraf dist",
     "predev": "yarn build",
-    "dev": "concurrently \"yarn tsc:main --watch\" \"yarn build:rollup -w\" \"next dev example\"",
-    "docs": "next build example && DOCS=true next export -o ./docs example && npx -p https://gist.github.com/stipsan/bbf4adcdafd9eabfa6a9a42397a1c1b9 -c 'git-update-ghpages'",
+    "dev": "concurrently 'yarn build:tsc --watch' 'yarn build:rollup -w'",
     "prepublishOnly": "unset npm_config_cafile && yarn build",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
-    "prestart": "yarn build",
-    "start": "next start example",
-    "test": "cypress run --browser chrome --reporter junit --reporter-options 'mochaFile=junit/test-results.xml'",
-    "tsc:main": "tsc -p ."
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
