--- a/packages/scroll-into-view-if-needed/package.json
+++ b/packages/scroll-into-view-if-needed/package.json
@@ -12,33 +12,46 @@
   "main": "dist/bundle.js",
   "scripts": {
     "prebuild": "yarn clean",
-    "build": "yarn build:tsc && yarn build:rollup",
+    "build": "yarn build:cjs && yarn build:es && yarn build:umd && yarn build:umd.min",
+    "build:cjs": "BABEL_ENV=cjs babel src -d .",
+    "build:es": "BABEL_ENV=es babel modules -d es",
     "build:rollup": "rollup -c",
     "build:tsc": "tsc -p .",
-    "clean": "rimraf dist",
-    "predev": "yarn build",
-    "dev": "concurrently 'yarn build:tsc --watch' 'yarn build:rollup -w'",
+    "build:umd": "BABEL_ENV=umd NODE_ENV=development rollup -c -f umd -o umd/scroll-into-view-if-needed.js",
+    "build:umd.min": "BABEL_ENV=umd NODE_ENV=production rollup -c -f umd -o umd/scroll-into-view-if-needed.min.js",
+    "clean": "rimraf 'umd' 'es'",
+    "dev": "concurrently 'yarn tsc --watch' 'yarn build:cjs --watch'",
     "prepublishOnly": "unset npm_config_cafile && yarn build",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
+  "dependencies": {
+    "invariant": "2.2.4",
+    "warning": "3.0.0"
+  },
   "devDependencies": {
+    "@babel/core": "7.0.0-beta.44",
+    "@babel/plugin-external-helpers": "7.0.0-beta.44",
+    "@babel/preset-env": "7.0.0-beta.44",
+    "@babel/preset-typescript": "7.0.0-beta.44",
     "babel-cli": "^6.23.0",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-dev-expression": "0.2.1",
     "babel-plugin-styled-components": "1.5.1",
-    "babel-preset-env": "^1.2.1",
-    "babel-preset-es2015-rollup": "^3.0.0",
     "concurrently": "^3.5.0",
     "release-relief": "1.0.1",
     "rimraf": "^2.6.1",
-    "rollup": "^0.50.0",
-    "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup": "0.58.1",
+    "rollup-plugin-babel": "4.0.0-beta.4",
+    "rollup-plugin-commonjs": "9.1.0",
+    "rollup-plugin-node-resolve": "3.3.0",
+    "rollup-plugin-replace": "2.0.0",
+    "rollup-plugin-uglify": "3.0.0",
     "typescript": "2.8.3"
   },
   "keywords": [
     "behavior-smooth",
     "if-needed",
+    "polyfill",
     "ponyfill",
     "scroll",
     "scroll-into-view",
