--- a/packages/scroll-into-view-if-needed/tsconfig.json
+++ b/packages/scroll-into-view-if-needed/tsconfig.json
@@ -1,16 +1,17 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "es2015",
     "moduleResolution": "node",
     "declaration": true,
+    "emitDeclarationOnly": true,
     "rootDir": "src",
-    "outDir": ".",
     "declarationDir": "typings",
-    "removeComments": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "strictNullChecks": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "alwaysStrict": true,
