--- a/website/package.json
+++ b/website/package.json
@@ -6,18 +6,20 @@
   "scripts": {
     "build": "next build",
     "dev": "next",
-    "docs": "next build example && DOCS=true next export -o ./docs example && npx -p https://gist.github.com/stipsan/bbf4adcdafd9eabfa6a9a42397a1c1b9 -c 'git-update-ghpages'",
+    "docs": "next build && DOCS=true next export -o ./docs && npx -p https://gist.github.com/stipsan/bbf4adcdafd9eabfa6a9a42397a1c1b9 -c 'git-update-ghpages'",
     "start": "next start",
     "test": "cypress run --browser chrome --reporter junit --reporter-options 'mochaFile=junit/test-results.xml'"
   },
   "dependencies": {
     "@types/next": "2.4.9",
+    "@types/node": "9.6.6",
     "@types/prettier": "1.12.0",
-    "@types/react": "16.3.11",
+    "@types/react": "16.3.12",
     "@types/react-dom": "16.0.5",
     "@zeit/next-typescript": "0.1.1",
     "bulma": "0.7.0",
     "codemirror": "5.36.0",
+    "fork-ts-checker-webpack-plugin": "0.4.1",
     "next": "5.1.0",
     "prettier-browser": "git://github.com/prettier/prettier.git#1.8.2",
     "react": "16.3.1",
