--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -14,7 +14,7 @@
     "sourceMap": true,
     "skipLibCheck": true,
     "baseUrl": ".",
-    "typeRoots": ["./node_modules/@types"],
-    "lib": ["dom", "es2015", "es2016"]
+    "lib": ["dom", "es2015", "es2016"],
+    "types": ["cypress", "node"]
   }
 }
