--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,9 @@
 aliases:
   - &restore-cache
     keys:
-      - v3-dependencies-{{ .Branch }}-{{ checksum "yarn.lock" }}
+      - v4-dependencies-{{ .Branch }}-{{ checksum "yarn.lock" }}
       # Fallback in case checksum fails
-      - v3-dependencies-{{ .Branch }}-
+      - v4-dependencies-{{ .Branch }}-
 
   - &install
     # --frozen-lockfile ensures the build will fail if the lockfile needs to be updated
@@ -13,7 +13,7 @@ aliases:
   - &save-cache
     paths:
       - node_modules
-    key: v2-dependencies-{{ .Branch }}-{{ checksum "yarn.lock" }}
+    key: v4-dependencies-{{ .Branch }}-{{ checksum "yarn.lock" }}
 
   - &cypress-dependencies-install
     run:
@@ -81,6 +81,8 @@ workflows:
       - Website
       - Semantic Release:
           requires:
+            - Typecheck
+            - Build
             - Website
           filters:
             branches:
