--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -15,7 +15,7 @@
     "skipLibCheck": true,
     "noEmit": true,
     "baseUrl": ".",
-    "lib": ["dom", "es2015", "es2016"],
-    "types": ["cypress", "node"]
-  }
+    "lib": ["dom", "es2015", "es2016"]
+  },
+  "exclude": ["cypress"]
 }
